--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "three": "^0.151.0"
   }
 }
