--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "moongose": "^1.0.0",
     "three": "^0.151.0"
   }
 }
