--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.3",
     "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "three": "^0.151.0"
   }
 }
