--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1",
     "three": "^0.151.0"
   }
 }
